grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: logging
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - log.example.com
    secretName: tls
  rules:
    - host: log.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
